# synth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini
client/: .babelrc  .flowconfig  .gitignore  package.json
client/app/: app.html
client/flow-typed/npm/: serialport_vx.x.x.js  tone_vx.x.x.js
client/src/: app.js  background.js  create_synth_keyboard.js  env.js  parse_note.js  parse_to_note.js  serialport.js  serialport_messages.js  utils.js
client/src/helpers/: window.js
client/src/ui/: App.jsx  KeyboardCommunication.jsx  app.js  toggle_button.js
lib/TFT-ILI9341-V5/: TFT9341.cpp  TFT9341.h  registers.h
lib/Wire2/: Wire2.cpp  Wire2.h
lib/atic/: CMakeLists.txt  LICENSE
melodies-data/: seven-nation-army.melo
scripts/: build-bash.sh  init.sh
src/: app-state.cc  app-state.cpp  app-state.h  app.cc  app.cpp  app.h  audio.cc  audio.cpp  audio.h  eeprom.cc  eeprom.h  empty.h  env.cc  env.h  keyboard.cc  keyboard.h  led_bulb.h  main.cc  main.cpp  messages.cc  messages.h  phrase.h  play_wrapper.h  player.cc  player.h  recorder.cc  recorder.h  screen.cpp  screen.h  serial_communication.cc  serial_communication.h  sound.cc  sound.h  sound_phrase.h  store.cc  store.h  timer.h  tones.h  types.h  utils.h  (+2 more)
src/melo/: ast.cc  ast.h  evaluator.cc  evaluator.h  melo.h  phrase.h
src/melo/evaluator/: evaluator.cc  evaluator.h  module.cc  module.h  section_walker.cc  section_walker.h  utils.cc  utils.h  values.h
src/melo/parser/: parser.cc  parser.h  state.h  token_types.cc  token_types.h  tokenizer.cc  tokenizer.h
src/melody_player/: melodies.h  melodies_creator.h  melody_comparator.cc  melody_comparator.h  melody_container.h  melody_player.cc  melody_player.h  parser.cc  parser.h  pgm_array.h  player.cc  player.h
src/melody_player/melodies/: another_brick_in_the_wall.h  seven_nation_army.h  the_small_jonathan.h
src/screen/: button.h  page.h  pages.cc  pages.cpp  pages.h  point.h  routes.cc  routes.h  screen.cc  screen.cpp  screen.h
src/screen/pages/: index.cc  keyboard.cc  menu.cc  practice_player.cc  practice_player_list.cc  practice_player_playing.cc  settings.cc
src/song_player/: melody_comparator.cc  melody_comparator.h  pgm_song_parser.cc  pgm_song_parser.h  song_container.h  song_player.cc  song_player.h  songs.h
src/storage/: base.h  comma_seperated.h  config.h  fs.h  list.h
src/view/: button.h  controller.cc  controller.h  elements.cc  elements.h  point.h  routes.cc  routes.h
(+26 files in other folders)
